[gd_scene load_steps=3 format=3 uid="uid://drq2fmsfwmjlc"]

[ext_resource type="Script" path="res://Endings/Death.gd" id="1_wpl81"]
[ext_resource type="Theme" uid="uid://cr4ambofr8c0u" path="res://UI/ending_theme.tres" id="2_n2lel"]

[node name="Death" type="Node2D"]
script = ExtResource("1_wpl81")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027451, 0.027451, 0.0235294, 1)

[node name="sec1" type="Timer" parent="."]
one_shot = true

[node name="sec2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="sec3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="sec4" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec5" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec6" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec7" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec8" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec9" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec10" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sec11" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Yes" type="Button" parent="."]
visible = false
offset_left = 691.0
offset_top = 567.0
offset_right = 717.0
offset_bottom = 590.0
theme = ExtResource("2_n2lel")
text = "yes"

[node name="No" type="Button" parent="."]
visible = false
offset_left = 418.0
offset_top = 569.0
offset_right = 438.0
offset_bottom = 592.0
theme = ExtResource("2_n2lel")
text = "no"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 545.0
offset_top = 503.0
offset_right = 624.0
offset_bottom = 534.0
text = "Continue"

[node name="Words" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 110.0
offset_right = 926.0
offset_bottom = 180.0
text = "You died."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words2" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 238.0
offset_right = 926.0
offset_bottom = 308.0
text = "However, you do not seem to fade away just yet..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words4" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 309.0
offset_right = 926.0
offset_bottom = 379.0
text = "You feel something holding you in place for now, preventing you from slipping out of existence forever. Maybe someone is looking out for you after all."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words5" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 391.0
offset_right = 926.0
offset_bottom = 461.0
text = "YYou cannot see anything around you... it's just darkness. You are just starting to wonder whether still being here is actually a good thing when you hear something call out to you."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words6" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 153.0
offset_right = 926.0
offset_bottom = 223.0
text = "it asks you:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words7" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 258.0
offset_right = 926.0
offset_bottom = 328.0
text = "Would you like to play again?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words8" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 198.0
offset_right = 926.0
offset_bottom = 268.0
text = "...
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words9" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 262.0
offset_right = 926.0
offset_bottom = 332.0
text = "good luck then... I can't wait to see what you will do this time, knowing what you do now =)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Words10" type="Label" parent="."]
visible = false
offset_left = 226.0
offset_top = 286.0
offset_right = 926.0
offset_bottom = 356.0
text = "I see. Bye bye for now then... I hope I will see you again in some other lifetime... I had so much fun watching you... play my game"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="sec1" to="." method="_on_sec_1_timeout"]
[connection signal="timeout" from="sec2" to="." method="_on_sec_2_timeout"]
[connection signal="timeout" from="sec3" to="." method="_on_sec_3_timeout"]
[connection signal="timeout" from="sec4" to="." method="_on_sec_4_timeout"]
[connection signal="timeout" from="sec5" to="." method="_on_sec_5_timeout"]
[connection signal="timeout" from="sec6" to="." method="_on_sec_6_timeout"]
[connection signal="timeout" from="sec7" to="." method="_on_sec_7_timeout"]
[connection signal="timeout" from="sec8" to="." method="_on_sec_8_timeout"]
[connection signal="timeout" from="sec9" to="." method="_on_sec_9_timeout"]
[connection signal="timeout" from="sec10" to="." method="_on_sec_10_timeout"]
[connection signal="timeout" from="sec11" to="." method="_on_sec_11_timeout"]
[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
